--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar"></nav>
+      <img
+        src="./assets/34cddefcf3444f96af0d053d1acbebec__1_-removebg-preview.png"
+        alt="Logo de landingPage"
+        class="logo"
+      />
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Clientes</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
   </body>
 </html>
