--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   </head>
   <body>
     <header>
-      <img
-        src="./assets/34cddefcf3444f96af0d053d1acbebec__1_-removebg-preview.png"
-        alt="Logo de landingPage"
-        class="logo"
-      />
+      <img src="./assets/logo3.png" alt="Logo de landingPage" class="logo" />
       <nav class="navbar">
         <ul class="navbar-list">
           <li><a href="#">Inicio</a></li>
@@ -23,5 +19,37 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section id="hero">
+        <div class="hero-info">
+          <h1>SUSTENTAMOS TU IDEA EN LINEA</h1>
+          <p>
+            Somos una empresa dedica al desarrollo web para todo tipo de
+            negocio. Brindamos todos los servicios para escalar tu negocio a
+            traves de la web, desde el diseño, asesoramiento y puesta en marcha.
+          </p>
+          <div class="botones">
+            <a href="#">Let's go</a>
+            <a href="#">Learn More</a>
+          </div>
+        </div>
+        <div class="hero-card">
+          <img
+            src="./assets/undraw_Building_blocks_re_5ahy.png"
+            alt="Imagen Portada"
+          />
+        </div>
+      </section>
+      <section id="mas-info">
+        <div class="masinfo">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet
+            architecto dicta corrupti aspernatur possimus veniam optio eligendi
+            harum ratione quod laboriosam amet impedit aut delectus provident,
+            animi doloremque exercitationem qui?
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
