Menu Hamburguesa Mediaqueries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <header>
       <img src="./assets/logo3.png" alt="Logo de landingPage" class="logo" />
       <nav class="navbar">
+        <label for="menu-toggle" class="menu-label">
+          <img src="./assets/Hamburger_icon.svg.png" class="menu-icon" />
+        </label>
+        <input type="checkbox" id="menu-toggle" />
         <ul class="navbar-list">
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Servicios</a></li>
