Modificaciones en la info

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   </head>
   <body>
     <header>
-      <img src="./assets/logo4.png" alt="Logo de landingPage" class="logo" />
+      <img
+        src="./assets/logo/logo4.png"
+        alt="Logo de landingPage"
+        class="logo"
+      />
       <nav class="navbar">
         <label for="menu-toggle" class="menu-label">
-          <img src="./assets/Hamburger_icon.svg.png" class="menu-icon" />
+          <img src="./assets/iconos/Hamburger_icon.svg.png" class="menu-icon" />
         </label>
         <input type="checkbox" id="menu-toggle" />
         <ul class="navbar-list">
@@ -30,8 +34,9 @@
           <h1>SUSTENTAMOS TU IDEA EN LINEA</h1>
           <p>
             Somos una empresa dedica al desarrollo web para todo tipo de
-            negocio. Brindamos todos los servicios para escalar tu negocio a
-            traves de la web, desde el diseño, asesoramiento y puesta en marcha.
+            negocio. Brindamos todos los servicios necesarios para escalar tu
+            negocio a traves de la web, desde el diseño, asesoramiento y puesta
+            en marcha.
           </p>
           <div class="botones">
             <a href="#">Let's go</a>
@@ -40,7 +45,7 @@
         </div>
         <div class="hero-card">
           <img
-            src="./assets/undraw_Building_blocks_re_5ahy.png"
+            src="./assets/ilustraciones/undraw_Building_blocks_re_5ahy.png"
             alt="Imagen Portada"
           />
         </div>
@@ -48,10 +53,10 @@
       <section id="mas-info">
         <div class="masinfo">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet
-            architecto dicta corrupti aspernatur possimus veniam optio eligendi
-            harum ratione quod laboriosam amet impedit aut delectus provident,
-            animi doloremque exercitationem qui?
+            En WEBMAKER contamos con los mejores profesionales especializados en
+            Fronted y Backend. Cientos de empresas nos eligen por nuestra
+            excelencia y calidad de nuestros servicios. Garantizamos la rapidez,
+            eficiencia y compromiso en el desarrollo web con nuestros clientes.
           </p>
         </div>
       </section>
