--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>WebMaker</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="stylesheet" href="./assets/mediaqueries.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -16,12 +23,10 @@
         class="logo"
       />
       <nav class="navbar">
-        <label for="menu-toggle" class="menu-label">
-          <img src="./assets/iconos/Hamburger_icon.svg.png" class="menu-icon" />
-        </label>
+        <label for="menu-toggle"><i class="fas fa-bars"></i></label>
         <input type="checkbox" id="menu-toggle" />
         <ul class="navbar-list">
-          <li><a href="#">Inicio</a></li>
+          <li><a href="#hero">Inicio</a></li>
           <li><a href="#">Servicios</a></li>
           <li><a href="#">Clientes</a></li>
           <li><a href="#">Contacto</a></li>
@@ -51,7 +56,7 @@
         </div>
       </section>
       <section id="mas-info">
-        <div class="masinfo">
+        <div>
           <p>
             En WEBMAKER contamos con los mejores profesionales especializados en
             Fronted y Backend. Cientos de empresas nos eligen por nuestra
