--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </p>
           <div class="botones">
             <a href="#">Let's go</a>
-            <a href="#">Learn More</a>
+            <a href="#info">Learn More</a>
           </div>
         </div>
         <div class="hero-card">
@@ -63,6 +63,27 @@
             excelencia y calidad de nuestros servicios. Garantizamos la rapidez,
             eficiencia y compromiso en el desarrollo web con nuestros clientes.
           </p>
+        </div>
+      </section>
+      <section id="info">
+        <h2>La Empresa Lider en Web Technology</h2>
+        <h3>Descubri y desencadena el potencial de tu negocio. Al unirte a nosotros, contaras con un amplio abanico de funcionalidades y nos aseguramos de brindarte: </h3>
+        <di class="info-cards-container">
+          <div class="info-card">
+            <img src="./assets/iconos/icono8.png" alt="card1">
+            <h3>Transparencia</h3>
+            <p>Cumplimos con lo prometido. Podras seguir de cerca el dessarrollo del sistema y de la Web.</p>
+          </div>
+          <div class="info-card">
+            <img src="./assets/iconos/icono3.png" alt="Card2">
+            <h3>Escalabilidad</h3>
+            <p>Estamos preparados para mejorar y adapatar tu web ante el crecimiento de tu negocio.</p>
+          </div>
+          <div class="info-card">
+            <img src="./assets/iconos/icono1.png" alt="card3">
+            <h3>Seguridad</h3>
+            <p>Tus datos e informacion se encontraran encriptados y protegidos ante posibles ciberataques.</p>
+          </div>
         </div>
       </section>
     </main>
