--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="#hero">Inicio</a></li>
           <li><a href="#">Servicios</a></li>
           <li><a href="#">Clientes</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -67,23 +67,86 @@
       </section>
       <section id="info">
         <h2>La Empresa Lider en Web Technology</h2>
-        <h3>Descubri y desencadena el potencial de tu negocio. Al unirte a nosotros, contaras con un amplio abanico de funcionalidades y nos aseguramos de brindarte: </h3>
-        <di class="info-cards-container">
+        <h3>
+          Descubri y desencadena el potencial de tu negocio. Al unirte a
+          nosotros, contaras con un amplio abanico de funcionalidades y nos
+          aseguramos de brindarte:
+        </h3>
+        <div class="info-cards-container">
           <div class="info-card">
-            <img src="./assets/iconos/icono8.png" alt="card1">
+            <img src="./assets/iconos/icono8.png" alt="card1" />
             <h3>Transparencia</h3>
-            <p>Cumplimos con lo prometido. Podras seguir de cerca el dessarrollo del sistema y de la Web.</p>
+            <p>
+              Cumplimos con lo prometido. Podras seguir de cerca el dessarrollo
+              del sistema y de la Web.
+            </p>
           </div>
           <div class="info-card">
-            <img src="./assets/iconos/icono3.png" alt="Card2">
+            <img src="./assets/iconos/icono3.png" alt="Card2" />
             <h3>Escalabilidad</h3>
-            <p>Estamos preparados para mejorar y adapatar tu web ante el crecimiento de tu negocio.</p>
+            <p>
+              Estamos preparados para mejorar y adapatar tu web ante el
+              crecimiento de tu negocio.
+            </p>
           </div>
           <div class="info-card">
-            <img src="./assets/iconos/icono1.png" alt="card3">
+            <img src="./assets/iconos/icono1.png" alt="card3" />
             <h3>Seguridad</h3>
-            <p>Tus datos e informacion se encontraran encriptados y protegidos ante posibles ciberataques.</p>
+            <p>
+              Tus datos e informacion se encontraran encriptados y protegidos
+              ante posibles ciberataques.
+            </p>
           </div>
+        </div>
+      </section>
+      <section id="contact">
+        <div>
+          <div class="info-contact">
+            <h4>Contactanos</h4>
+            <div class="gps">
+              <img src="./assets/iconos/gps.png" alt="gpsIcono" />
+              <p>Blvd. San Juan 76, Cba, Arg.</p>
+            </div>
+            <div class="mail">
+              <img src="./assets/iconos/mail.png" alt="mail" />
+              <p>webmakersupport@gmail.com</p>
+            </div>
+            <div class="tel">
+              <img src="./assets/iconos/tel.png" alt="tel" />
+              <p>+54 3513207202</p>
+            </div>
+          </div>
+          <div class="iconos-contact">
+            <a href=""
+              ><img
+                src="./assets/iconos/icons8-github-256.png"
+                alt="githubIcono"
+            /></a>
+            <a href=""
+              ><img
+                src="./assets/iconos/icons8-instagram-256.png"
+                alt="igIcono"
+            /></a>
+            <a href=""
+              ><img
+                src="./assets/iconos/icons8-facebook-nuevo-256.png"
+                alt="faceIcono"
+            /></a>
+            <a href=""
+              ><img src="./assets/iconos/icons8-twitter-256.png" alt="twIcono"
+            /></a>
+          </div>
+        </div>
+        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d851.1926706191052!2d-64.1876377707922!3d-31.42044359883766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2844fc1c4d9%3A0xa337f9b17a21a039!2sBlvd.%20San%20Juan%2076%2C%20X5000ATN%20C%C3%B3rdoba!5e0!3m2!1sen!2sar!4v1664568908453!5m2!1sen!2sar"
+            width="300"
+            height="300"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </section>
     </main>
