--- a/index.html
+++ b/index.html
@@ -103,36 +103,36 @@
         <div>
           <div class="info-contact">
             <h4>Contactanos</h4>
-            <div class="gps">
+            <div class="iconos-contact">
               <img src="./assets/iconos/gps.png" alt="gpsIcono" />
               <p>Blvd. San Juan 76, Cba, Arg.</p>
             </div>
-            <div class="mail">
+            <div class="iconos-contact">
               <img src="./assets/iconos/mail.png" alt="mail" />
               <p>webmakersupport@gmail.com</p>
             </div>
-            <div class="tel">
+            <div class="iconos-contact">
               <img src="./assets/iconos/tel.png" alt="tel" />
               <p>+54 3513207202</p>
             </div>
           </div>
-          <div class="iconos-contact">
-            <a href=""
+          <div class="iconos-redes">
+            <a href="#"
               ><img
                 src="./assets/iconos/icons8-github-256.png"
                 alt="githubIcono"
             /></a>
-            <a href=""
+            <a href="#"
               ><img
                 src="./assets/iconos/icons8-instagram-256.png"
                 alt="igIcono"
             /></a>
-            <a href=""
+            <a href="#"
               ><img
                 src="./assets/iconos/icons8-facebook-nuevo-256.png"
                 alt="faceIcono"
             /></a>
-            <a href=""
+            <a href="#"
               ><img src="./assets/iconos/icons8-twitter-256.png" alt="twIcono"
             /></a>
           </div>
@@ -149,6 +149,16 @@
           ></iframe>
         </div>
       </section>
+      <footer>
+        <div>
+          <ul class="footer-links">
+            <li><a href="#">Terminos de Uso</a></li>
+            <li><a href="#">Trabaja con Nosotros</a></li>
+            <li><a href="#">Soporte</a></li>
+          </ul>
+          <p>WebMaker Corporation®</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
