--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </p>
         </div>
       </section>
+      <span class="separador"></span>
       <section id="info">
         <h2>La Empresa Lider en Web Technology</h2>
         <h3>
@@ -99,6 +100,7 @@
           </div>
         </div>
       </section>
+      <span class="separador"></span>
       <section id="contact">
         <div>
           <div class="info-contact">
